Address PR review comments & refactor test class